--- a/CslaModelTemplates.Resources/CslaModelTemplates.Resources.csproj
+++ b/CslaModelTemplates.Resources/CslaModelTemplates.Resources.csproj
@@ -10,6 +10,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>CommonText.resx</DependentUpon>
     </Compile>
+    <Compile Update="DalText.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DalText.resx</DependentUpon>
+    </Compile>
     <Compile Update="ValidationText.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -21,6 +26,10 @@
     <EmbeddedResource Update="CommonText.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>CommonText.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="DalText.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>DalText.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="ValidationText.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
