--- a/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
+++ b/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="CSLA-Core" Version="4.11.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CslaModelTemplates.Common\CslaModelTemplates.Common.csproj" />
+  </ItemGroup>
+
 </Project>
