--- a/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
+++ b/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
@@ -10,8 +10,8 @@
     <Folder Include="ComplexSet\" />
     <Folder Include="ComplexView\" />
     <Folder Include="Complex\" />
-    <Folder Include="SelectionByCode\" />
-    <Folder Include="SelectionByKey\" />
+    <Folder Include="SelectionWithCode\" />
+    <Folder Include="SelectionWithKey\" />
     <Folder Include="SimpleList\" />
     <Folder Include="SimpleSet\" />
     <Folder Include="SimpleView\" />
