Add test data for roots.

--- a/CslaModelTemplates.WebApi/appsettings.json
+++ b/CslaModelTemplates.WebApi/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DalSettings": {
+    "Layers": {
+      "MySQL": {
+        "ConnectionString": "server=127.0.0.1;uid=cslamodel;pwd=CSLA+Secret;database=CSLA_Models",
+        "DalManagerType": "CslaModelTemplates.Dal.MySql.DalManager, CslaModelTemplates.Dal.MySql"
+      }
+    },
+    "ActiveLayer": "MySQL"
+  }
 }
