--- a/CslaModelTemplates.WebApi/CslaModelTemplates.WebApi.csproj
+++ b/CslaModelTemplates.WebApi/CslaModelTemplates.WebApi.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CslaModelTemplates.Common\CslaModelTemplates.Common.csproj" />
+    <ProjectReference Include="..\CslaModelTemplates.Dal.MySql\CslaModelTemplates.Dal.MySql.csproj" />
     <ProjectReference Include="..\CslaModelTemplates.Models\CslaModelTemplates.Models.csproj" />
     <ProjectReference Include="..\CslaModelTemplates.Resources\CslaModelTemplates.Resources.csproj" />
   </ItemGroup>
