Rename simple elements.

--- a/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
+++ b/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Command\" />
+    <Folder Include="ComplexCommand\" />
+    <Folder Include="SimpleCommand\" />
     <Folder Include="ComplexList\" />
     <Folder Include="ComplexSet\" />
     <Folder Include="ComplexView\" />
