--- a/CslaModelTemplates.Dal.MySql/CslaModelTemplates.Dal.MySql.csproj
+++ b/CslaModelTemplates.Dal.MySql/CslaModelTemplates.Dal.MySql.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Command\" />
+    <Folder Include="ComplexCommand\" />
+    <Folder Include="SimpleCommand\" />
     <Folder Include="ComplexList\" />
     <Folder Include="ComplexSet\" />
     <Folder Include="ComplexView\" />
