--- a/CslaModelTemplates.Models/CslaModelTemplates.Models.csproj
+++ b/CslaModelTemplates.Models/CslaModelTemplates.Models.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\CslaModelTemplates.Resources\CslaModelTemplates.Resources.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ComplexCommand\" />
+  </ItemGroup>
+
 </Project>
