Fix some issues.

--- a/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
+++ b/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
@@ -11,6 +11,8 @@
     <Folder Include="ComplexSet\" />
     <Folder Include="ComplexView\" />
     <Folder Include="Complex\" />
+    <Folder Include="Tree\" />
+    <Folder Include="SimpleCommand\" />
     <Folder Include="SelectionWithCode\" />
     <Folder Include="SelectionWithKey\" />
     <Folder Include="SimpleList\" />
