--- a/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
+++ b/CslaModelTemplates.Dal.SqlServer/CslaModelTemplates.Dal.SqlServer.csproj
@@ -5,20 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Command\" />
-    <Folder Include="ComplexCommand\" />
-    <Folder Include="ComplexList\" />
-    <Folder Include="ComplexSet\" />
-    <Folder Include="ComplexView\" />
-    <Folder Include="Complex\" />
-    <Folder Include="Tree\" />
-    <Folder Include="SimpleCommand\" />
-    <Folder Include="SelectionWithCode\" />
-    <Folder Include="SelectionWithKey\" />
-    <Folder Include="SimpleList\" />
-    <Folder Include="SimpleSet\" />
-    <Folder Include="SimpleView\" />
-    <Folder Include="Simple\" />
+    <Compile Remove="Command\**" />
+    <EmbeddedResource Remove="Command\**" />
+    <None Remove="Command\**" />
   </ItemGroup>
 
   <ItemGroup>
