--- a/CslaModelTemplates.WebApiTests/appsettings.json
+++ b/CslaModelTemplates.WebApiTests/appsettings.json
@@ -12,8 +12,12 @@
       "MySQL": {
         "ConnectionString": "server=127.0.0.1;uid=cslamodel;pwd=CSLA+Secret;database=CSLA_Models",
         "DalManagerType": "CslaModelTemplates.Dal.MySql.DalManager, CslaModelTemplates.Dal.MySql"
+      },
+      "SQLServer": {
+        "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CSLA_Models;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "MySQL"
+    "ActiveLayer": "SQLServer"
   }
 }
