--- a/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
+++ b/CslaModelTemplates.Contracts/CslaModelTemplates.Contracts.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\CslaModelTemplates.Common\CslaModelTemplates.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="LookUp\" />
+  </ItemGroup>
+
 </Project>
