--- a/CslaModelTemplates.Common/CslaModelTemplates.Common.csproj
+++ b/CslaModelTemplates.Common/CslaModelTemplates.Common.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSLA-Core" Version="4.11.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
     <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 
