--- a/CslaModelTemplates.Dal.MySql/CslaModelTemplates.Dal.MySql.csproj
+++ b/CslaModelTemplates.Dal.MySql/CslaModelTemplates.Dal.MySql.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CSLA-EntityFrameworkCore" Version="4.11.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
   </ItemGroup>
 
@@ -15,6 +15,10 @@
     <ProjectReference Include="..\CslaModelTemplates.Contracts\CslaModelTemplates.Contracts.csproj" />
     <ProjectReference Include="..\CslaModelTemplates.Dal\CslaModelTemplates.Dal.csproj" />
     <ProjectReference Include="..\CslaModelTemplates.Resources\CslaModelTemplates.Resources.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="LookUp\" />
   </ItemGroup>
 
 </Project>
