--- a/CslaModelTemplates.Dal/CslaModelTemplates.Dal.csproj
+++ b/CslaModelTemplates.Dal/CslaModelTemplates.Dal.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CSLA-EntityFrameworkCore" Version="4.11.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
   </ItemGroup>
 
   <ItemGroup>
