--- a/CslaModelTemplates.WebApi/appsettings.json
+++ b/CslaModelTemplates.WebApi/appsettings.json
@@ -18,6 +18,6 @@
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "SQLServer"
+    "ActiveLayer": "MySQL"
   }
 }
