Add Oracle data access.

--- a/CslaModelTemplates.WebApi/appsettings.json
+++ b/CslaModelTemplates.WebApi/appsettings.json
@@ -13,11 +13,15 @@
         "ConnectionString": "server=127.0.0.1;uid=cslamodel;pwd=CSLA+Secret;database=CSLA_Models",
         "DalManagerType": "CslaModelTemplates.Dal.MySql.DalManager, CslaModelTemplates.Dal.MySql"
       },
+      "Oracle": {
+        "ConnectionString": "Data Source=localhost:1521/XE;User Id=C##CSLAMODEL;Password=CSLA7Secret;",
+        "DalManagerType": "CslaModelTemplates.Dal.Oracle.DalManager, CslaModelTemplates.Dal.Oracle"
+      },
       "SQLServer": {
         "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CSLA_Models;Trusted_Connection=True;MultipleActiveResultSets=true",
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "SQLServer"
+    "ActiveLayer": "Oracle"
   }
 }
