--- a/CslaModelTemplates.WebApi/appsettings.json
+++ b/CslaModelTemplates.WebApi/appsettings.json
@@ -26,6 +26,6 @@
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "PostgreSQL"
+    "ActiveLayer": "SQLServer"
   }
 }
