--- a/CslaModelTemplates.WebApiTests/appsettings.json
+++ b/CslaModelTemplates.WebApiTests/appsettings.json
@@ -17,11 +17,15 @@
         "ConnectionString": "Data Source=localhost:1521/XE;User Id=C##CSLAMODEL;Password=CSLA7Secret;",
         "DalManagerType": "CslaModelTemplates.Dal.Oracle.DalManager, CslaModelTemplates.Dal.Oracle"
       },
+      "PostgreSQL": {
+        "ConnectionString": "Host=localhost;Database=CSLA_Models;Username=cslamodel;Password=CSLA+Secret",
+        "DalManagerType": "CslaModelTemplates.Dal.PostgreSql.DalManager, CslaModelTemplates.Dal.PostgreSql"
+      },
       "SQLServer": {
         "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CSLA_Models;Trusted_Connection=True;MultipleActiveResultSets=true",
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "Oracle"
+    "ActiveLayer": "SQLServer"
   }
 }
