--- a/CslaModelTemplates.WebApiTests/appsettings.json
+++ b/CslaModelTemplates.WebApiTests/appsettings.json
@@ -21,11 +21,15 @@
         "ConnectionString": "Host=localhost;Database=CSLA_Models;Username=cslamodel;Password=CSLA+Secret",
         "DalManagerType": "CslaModelTemplates.Dal.PostgreSql.DalManager, CslaModelTemplates.Dal.PostgreSql"
       },
+      "SQLite": {
+        "ConnectionString": "Data Source=sqlite.db;",
+        "DalManagerType": "CslaModelTemplates.Dal.Sqlite.DalManager, CslaModelTemplates.Dal.Sqlite"
+      },
       "SQLServer": {
         "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CSLA_Models;Trusted_Connection=True;MultipleActiveResultSets=true",
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "SQLServer"
+    "ActiveLayer": "SQLite"
   }
 }
