--- a/CslaModelTemplates.WebApi/appsettings.json
+++ b/CslaModelTemplates.WebApi/appsettings.json
@@ -30,6 +30,6 @@
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.DalManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "SQLite"
+    "ActiveLayer": "SQLServer"
   }
 }
