--- a/CslaModelTemplates.EndpointTests/appsettings.json
+++ b/CslaModelTemplates.EndpointTests/appsettings.json
@@ -30,6 +30,6 @@
         "DalManagerType": "CslaModelTemplates.Dal.SqlServer.SqlServerManager, CslaModelTemplates.Dal.SqlServer"
       }
     },
-    "ActiveLayer": "SQLServer"
+    "ActiveLayer": "MySQL"
   }
 }
