--- a/CslaModelTemplates.EndpointTests/CslaModelTemplates.EndpointTests.csproj
+++ b/CslaModelTemplates.EndpointTests/CslaModelTemplates.EndpointTests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\Shared\SharedSettings.json" Link="SharedSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
